--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2012-11-30 15:15+0000\n"
-"Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
+"PO-Revision-Date: 2013-01-03 14:35+0000\n"
+"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:39+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-04 04:48+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -244,7 +244,7 @@ msgstr "Mostra questa etichetta nella scaletta di lavoro"
 msgid ""
 "You can create, open or filter your tasks                                    "
 "                                     here"
-msgstr ""
+msgstr "Qui è possibile creare, aprire o filtrare le proprie attività"
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
@@ -257,6 +257,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"Il servizio di sincronizzazione <b>%s</b> non è accessibile con i dati "
+"forniti ed è stato quindi disabilitato. Per effettuare nuovamente l'accesso, "
+"abilitare nuovamente il servizio."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -826,7 +829,7 @@ msgstr ""
 
 #: GTG/plugins/not_today/not_today.py:59
 msgid "Do it tomorrow"
-msgstr ""
+msgstr "Rimanda a domani"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
@@ -879,11 +882,11 @@ msgstr "A_ggiungi nuova attività"
 
 #: GTG/plugins/notification_area/notification_area.py:281
 msgid "_Show Main Window"
-msgstr ""
+msgstr "Mo_stra finestra principale"
 
 #: GTG/plugins/notification_area/notification_area.py:294
 msgid "_Quit"
-msgstr ""
+msgstr "_Esci"
 
 #: GTG/plugins/export/export_templates/description_textual.py:21
 msgid "Text-only"
