--- a/po/ru.po
+++ b/po/ru.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-01-04 16:35+0000\n"
-"Last-Translator: Yevgeny Sysmanov <xghpro@gmail.com>\n"
+"PO-Revision-Date: 2013-01-05 17:47+0000\n"
+"Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-01-05 05:04+0000\n"
+"X-Launchpad-Export-Date: 2013-01-06 04:55+0000\n"
 "X-Generator: Launchpad (build 16393)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -205,7 +205,7 @@ msgstr "Отметить выбранную задачу как требующу
 #: GTG/gtk/browser/__init__.py:41 GTG/gtk/browser/taskbrowser.glade.h:26
 #: GTG/gtk/editor/__init__.py:33 GTG/gtk/editor/taskeditor.glade.h:3
 msgid "Dismiss"
-msgstr "Отменить выполнение задачи"
+msgstr "Отменить"
 
 #: GTG/gtk/browser/__init__.py:42
 msgid "Mark the task as not to be done anymore"
@@ -468,7 +468,7 @@ msgstr "Панель _инструментов"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:14
 msgid "_Quick Add Entry"
-msgstr "_Быстрое добавление"
+msgstr "_Быстрый ввод"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:15
 msgid "_Plugins"
