--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,42 +8,42 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: Rex Tsai <chihchun@kalug.linux.org.tw>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2011-08-15 19:02+0000\n"
-"Last-Translator: Rex Tsai <Unknown>\n"
+"PO-Revision-Date: 2013-01-05 17:31+0000\n"
+"Last-Translator: extraymond@gmail.com <extraymond@gmail.com>\n"
 "Language-Team: Chinese (traditional) <chinese-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:40+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-06 04:55+0000\n"
+"X-Generator: Launchpad (build 16393)\n"
 "Language: zh_TW\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr ""
+msgstr "同步服務 - %s"
 
 #: GTG/gtk/backends_dialog/__init__.py:295
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "您真的想要移除 '%s' 的同步服務嗎？"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:148
 msgid "Disable syncing"
-msgstr ""
+msgstr "停用同步"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:150
 msgid "Enable syncing"
-msgstr ""
+msgstr "啓用同步"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:158
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "這是預設的同步服務"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:161
 msgid "Syncing is enabled."
-msgstr ""
+msgstr "同步已啓用"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:163
 msgid "Syncing is <span color=\"red\">disabled</span>."
@@ -51,11 +51,11 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:62
 msgid "Import tags"
-msgstr ""
+msgstr "匯入標籤"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "All tags"
-msgstr ""
+msgstr "所有標籤"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "Just these tags:"
@@ -76,11 +76,11 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:73
 msgid "Username"
-msgstr ""
+msgstr "使用者名稱"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:78
 msgid "Service URL"
-msgstr ""
+msgstr "服務網址"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:81
 msgid "Import tasks from @ replies "
@@ -109,20 +109,19 @@ msgstr ""
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:94
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " 分鐘"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:48
 msgid "Password:"
-msgstr ""
+msgstr "密碼:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:49
 msgid "Filename:"
-msgstr ""
+msgstr "檔案名稱："
 
 #: GTG/gtk/backends_dialog/addpanel.py:68
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "選擇同步服務:"
 
 #: GTG/gtk/backends_dialog/addpanel.py:172
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -131,8 +130,7 @@ msgstr ""
 #: GTG/gtk/backends_dialog/addpanel.py:178
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "作者"
 
 #: GTG/gtk/preferences.glade.h:1
 msgid "Start Getting Things GNOME! on every login"
@@ -148,7 +146,7 @@ msgstr ""
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Show description preview in the task list."
-msgstr ""
+msgstr "顯示任務列裡的描述預覽"
 
 #: GTG/gtk/preferences.glade.h:5
 msgid "<b>Task Browser</b>"
@@ -156,7 +154,7 @@ msgstr "<b>任務瀏覽器</b>"
 
 #: GTG/gtk/preferences.glade.h:6
 msgid "Font :"
-msgstr ""
+msgstr "字體:"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "<b>Editor</b>"
@@ -164,15 +162,15 @@ msgstr ""
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "page 1"
-msgstr ""
+msgstr "第1頁"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "page 2"
-msgstr ""
+msgstr "第2頁"
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "page 3"
-msgstr ""
+msgstr "第3頁"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -194,7 +192,7 @@ msgstr "將選擇的任務標記已完成"
 
 #: GTG/gtk/browser/__init__.py:39 GTG/gtk/editor/__init__.py:32
 msgid "Mark as not Done"
-msgstr ""
+msgstr "標記爲未完成"
 
 #: GTG/gtk/browser/__init__.py:40 GTG/gtk/browser/__init__.py:44
 msgid "Mark the selected task as to be done"
@@ -235,11 +233,11 @@ msgstr "只顯示目前進行中的任務"
 
 #: GTG/gtk/browser/__init__.py:50
 msgid "Hide this tag from the workview"
-msgstr ""
+msgstr "從工作清單隱藏次標籤"
 
 #: GTG/gtk/browser/__init__.py:51
 msgid "Show this tag in the workview"
-msgstr ""
+msgstr "從工作清單顯示次標籤"
 
 #: GTG/gtk/browser/__init__.py:52
 msgid ""
@@ -249,7 +247,7 @@ msgstr ""
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
-msgstr ""
+msgstr "清除"
 
 #: GTG/gtk/browser/custominfobar.py:35
 #, python-format
@@ -274,31 +272,31 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
-msgstr ""
+msgstr "設定同步服務"
 
 #: GTG/gtk/browser/custominfobar.py:107
 msgid "Ignore"
-msgstr ""
+msgstr "忽略"
 
 #: GTG/gtk/browser/custominfobar.py:115 GTG/gtk/browser/custominfobar.py:120
 msgid "Ok"
-msgstr ""
+msgstr "確定"
 
 #: GTG/gtk/browser/custominfobar.py:141
 msgid "Confirm"
-msgstr ""
+msgstr "確認"
 
 #: GTG/gtk/browser/custominfobar.py:143
 msgid "Continue"
-msgstr ""
+msgstr "繼續"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:1
 msgid "Modify Tags"
-msgstr ""
+msgstr "修改標籤"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:2
 msgid "Add/Remove Tags"
-msgstr ""
+msgstr "新增/移除 標籤"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:3
 msgid "Cancel"
