--- a/po/cs.po
+++ b/po/cs.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2012-12-14 01:29+0000\n"
-"Last-Translator: Dominik Janků <djanku@email.cz>\n"
+"PO-Revision-Date: 2013-01-09 22:32+0000\n"
+"Last-Translator: Konki <pavel.konkol@seznam.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:38+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-10 04:47+0000\n"
+"X-Generator: Launchpad (build 16412)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -246,7 +246,7 @@ msgstr "Zobrazit tento štítek v pracovním pohledu"
 msgid ""
 "You can create, open or filter your tasks                                    "
 "                                     here"
-msgstr ""
+msgstr "Můžete vytvářet, otvírat, nebo filtovat své úkoly zde."
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
@@ -595,7 +595,7 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "Set Due Date"
-msgstr ""
+msgstr "Nastavit termín"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
@@ -818,7 +818,7 @@ msgstr "GTG je osobní organizátor úkolů a seznamů TODO pro GNOME."
 
 #: GTG/plugins/not_today/not_today.py:59
 msgid "Do it tomorrow"
-msgstr ""
+msgstr "Udělat zítra"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
@@ -871,11 +871,11 @@ msgstr "Vložit nový úkol"
 
 #: GTG/plugins/notification_area/notification_area.py:281
 msgid "_Show Main Window"
-msgstr ""
+msgstr "_Zobrazit hlavní okno"
 
 #: GTG/plugins/notification_area/notification_area.py:294
 msgid "_Quit"
-msgstr ""
+msgstr "_Ukončit"
 
 #: GTG/plugins/export/export_templates/description_textual.py:21
 msgid "Text-only"
