--- a/po/de.po
+++ b/po/de.po
@@ -8,25 +8,26 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2012-10-12 12:52+0000\n"
-"Last-Translator: gerber <Unknown>\n"
+"PO-Revision-Date: 2013-01-09 08:48+0000\n"
+"Last-Translator: Scott <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:39+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-10 04:47+0000\n"
+"X-Generator: Launchpad (build 16412)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr ""
+msgstr "Synchronisationsdienst -%s"
 
 #: GTG/gtk/backends_dialog/__init__.py:295
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
 msgstr ""
+"Wollen Sie wirklich '%s\" aus den Synchronisationsdiensten entfernen?"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:148
 msgid "Disable syncing"
@@ -38,7 +39,7 @@ msgstr "Synchronisation aktivieren"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:158
 msgid "This is the default synchronization service"
-msgstr ""
+msgstr "Dies ist der standardmäßige Synchronisationsdienst."
 
 #: GTG/gtk/backends_dialog/configurepanel.py:161
 msgid "Syncing is enabled."
@@ -54,7 +55,7 @@ msgstr "Schlagworte importieren"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "All tags"
-msgstr ""
+msgstr "Alle Schlagwörter"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "Just these tags:"
@@ -79,27 +80,27 @@ msgstr "Benutzername"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:78
 msgid "Service URL"
-msgstr ""
+msgstr "Adresse des Dienstes"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:81
 msgid "Import tasks from @ replies "
-msgstr ""
+msgstr "Aufgaben aus @ importieren antwortet "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:85
 msgid "Import tasks from direct messages"
-msgstr ""
+msgstr "Aufgaben aus Direktnachrichten importieren"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:88
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "Aufgaben aus Ihren Tweets importieren"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Tag your GTG tasks with the bug tags"
-msgstr ""
+msgstr "Schlagwörter des Fehlerberichts in GTG-Aufgaben übernehmen"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
 msgid "Tag your GTG tasks with the project targeted by the bug"
-msgstr ""
+msgstr "Projekt des Fehlerberichts in GTG-Aufgaben übernehmen"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:49
 msgid "Check for new tasks every"
@@ -113,15 +114,15 @@ msgstr[1] " Minuten"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:48
 msgid "Password:"
-msgstr ""
+msgstr "Passwort:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:49
 msgid "Filename:"
-msgstr ""
+msgstr "Dateiname:"
 
 #: GTG/gtk/backends_dialog/addpanel.py:68
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "Wählen Sie einen Synchronisationsdienst"
 
 #: GTG/gtk/backends_dialog/addpanel.py:172
 msgid "Syncing is <span color=\"red\">disabled</span>"
@@ -139,15 +140,15 @@ msgstr "Getting Things GNOME! bei jeder Anmeldung ausführen"
 
 #: GTG/gtk/preferences.glade.h:2
 msgid "<b>Startup</b>"
-msgstr ""
+msgstr "<b>Starten</b>"
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "Enable colored backgrounds in the task list"
-msgstr ""
+msgstr "Ermögliche farbige Hintergründe in der Aufgabenliste"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Show description preview in the task list."
-msgstr ""
+msgstr "Vorschau in Aufgabenliste anzeigen."
 
 #: GTG/gtk/preferences.glade.h:5
 msgid "<b>Task Browser</b>"
@@ -155,23 +156,23 @@ msgstr "<b>Aufgaben-Übersicht</b>"
 
 #: GTG/gtk/preferences.glade.h:6
 msgid "Font :"
-msgstr ""
+msgstr "Schriftart"
 
 #: GTG/gtk/preferences.glade.h:7
 msgid "<b>Editor</b>"
-msgstr ""
+msgstr "<b>Editor</b>"
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "page 1"
-msgstr ""
+msgstr "Seite 1"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "page 2"
-msgstr ""
+msgstr "Seite 2"
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "page 3"
-msgstr ""
+msgstr "Seite 3"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -180,7 +181,7 @@ msgstr "Aufgabe wirklich löschen?"
 #: GTG/gtk/preferences.py:85
 #, python-format
 msgid "Preferences - %s"
-msgstr ""
+msgstr "Einstellungen - %s"
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/browser/taskbrowser.glade.h:25
 #: GTG/gtk/editor/__init__.py:31
@@ -193,7 +194,7 @@ msgstr "Ausgewählte Aufgabe als erledigt markieren"
 
 #: GTG/gtk/browser/__init__.py:39 GTG/gtk/editor/__init__.py:32
 msgid "Mark as not Done"
-msgstr ""
+msgstr "Als \"nicht erledigt\" markieren."
 
 #: GTG/gtk/browser/__init__.py:40 GTG/gtk/browser/__init__.py:44
 msgid "Mark the selected task as to be done"
@@ -234,21 +235,21 @@ msgstr "Nur aktuell bearbeitbare Aufgaben anzeigen"
 
 #: GTG/gtk/browser/__init__.py:50
 msgid "Hide this tag from the workview"
-msgstr ""
+msgstr "Dieses Schlagwort in der Arbeitsansicht ausblenden"
 
 #: GTG/gtk/browser/__init__.py:51
 msgid "Show this tag in the workview"
-msgstr ""
+msgstr "Dieses Schlagwort in der Arbeitsansicht anzeigen"
 
 #: GTG/gtk/browser/__init__.py:52
 msgid ""
 "You can create, open or filter your tasks                                    "
 "                                     here"
-msgstr ""
+msgstr "Sie können hier Ihre Aufgaben erstellen, öffnen oder filtern"
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
-msgstr ""
+msgstr "Leeren"
 
 #: GTG/gtk/browser/custominfobar.py:35
 #, python-format
@@ -264,12 +265,16 @@ msgid ""
 "Due to a network problem, I cannot contact the <b>%s</b> synchronization "
 "service."
 msgstr ""
+"Ein Netzwerkproblem verhindert den Zugriff auf den Synchronisationsdienst "
+"<b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
 msgid ""
 "Cannot connect to DBus, I've disabled the <b>%s</b> synchronization service."
 msgstr ""
+"Konnte nicht mit DBus verbinden, Synchronisationsdienst <b>%s</b> wurde "
+"deaktiviert."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure synchronization service"
@@ -277,27 +282,27 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:107
 msgid "Ignore"
-msgstr ""
+msgstr "ignorieren"
 
 #: GTG/gtk/browser/custominfobar.py:115 GTG/gtk/browser/custominfobar.py:120
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: GTG/gtk/browser/custominfobar.py:141
 msgid "Confirm"
-msgstr ""
+msgstr "Bestätigen"
 
 #: GTG/gtk/browser/custominfobar.py:143
 msgid "Continue"
-msgstr ""
+msgstr "Weiter"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:1
 msgid "Modify Tags"
-msgstr ""
+msgstr "Schlagwörter bearbeiten"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:2
 msgid "Add/Remove Tags"
-msgstr ""
+msgstr "Schlagwörter hinzufügen/entfernen"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:3
 msgid "Cancel"
@@ -306,6 +311,7 @@ msgstr "Abbrechen"
 #: GTG/gtk/browser/modifytags_dialog.glade.h:4
 msgid "Enter the name of the tag(s) you wish to add or remove:"
 msgstr ""
+"Tragen Sie die Schlagwörter ein, die Sie hinzufügen oder entfernen wollen"
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:5
 msgid "TagName"
@@ -316,6 +322,9 @@ msgid ""
 "Hint: you can add several tags by separating them with\n"
 "space. Place '!' before tags you want to remove."
 msgstr ""
+"Hinweis: Sie können mehrere Schlagwörter hinzufügen, indem Sie diese durch "
+"Leerzeichen trennen. Setzen Sie ein '!' vor Schlagwörter, die zu entfernen "
+"sind."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:8
 msgid "Apply to subtasks"
@@ -327,7 +336,7 @@ msgstr ""
 
 #: GTG/gtk/browser/simple_color_selector.py:264
 msgid "Choose a color"
-msgstr ""
+msgstr "Farbe auswählen"
 
 #: GTG/gtk/browser/treeview_factory.py:274
 #: GTG/gtk/browser/taskbrowser.glade.h:29
@@ -344,7 +353,7 @@ msgstr "Fällig am"
 
 #: GTG/gtk/browser/treeview_factory.py:348
 msgid "Closed date"
-msgstr ""
+msgstr "Abgeschlossen"
 
 #: GTG/gtk/browser/treeview_factory.py:410
 msgid "Title"
@@ -352,33 +361,35 @@ msgstr "Titel"
 
 #: GTG/gtk/browser/tag_editor.py:87
 msgid "Remove selected icon"
-msgstr ""
+msgstr "Entferne ausgewähltes Symbol."
 
 #: GTG/gtk/browser/tag_editor.py:224
 msgid "Name : "
-msgstr ""
+msgstr "Name: "
 
 #: GTG/gtk/browser/tag_editor.py:231
 msgid "Show Tag in Work View :"
-msgstr ""
+msgstr "Zeige Schlagwort in Arbeitsansicht:"
 
 #: GTG/gtk/browser/tag_editor.py:244
 msgid "Select Tag Color:"
-msgstr ""
+msgstr "Auswahl der Schlagwort-Farbe:"
 
 #: GTG/gtk/browser/tag_editor.py:284
 msgid ""
 "Click To\n"
 "Set Icon"
 msgstr ""
+"Klicken Sie, um\n"
+"ein Symbol festzulegen"
 
 #: GTG/gtk/browser/tag_editor.py:294
 msgid "Enter tag name here"
-msgstr ""
+msgstr "Geben Sie hier ein Schlagwort ein"
 
 #: GTG/gtk/browser/modifytags_dialog.py:38
 msgid "NewTag"
-msgstr ""
+msgstr "Neues Schlagwort"
 
 #: GTG/gtk/browser/browser.py:582
 msgid "no active tasks"
@@ -393,7 +404,7 @@ msgstr[1] "%(tasks)d aktive Aufgaben"
 
 #: GTG/gtk/browser/browser.py:1516
 msgid "Add Task"
-msgstr ""
+msgstr "Aufgabe hinzufügen"
 
 #: GTG/gtk/browser/browser.py:1517
 msgid "Open Task"
@@ -401,11 +412,11 @@ msgstr "Aufgabe öffnen"
 
 #: GTG/gtk/browser/browser.py:1518 GTG/core/treefactory.py:102
 msgid "Search"
-msgstr ""
+msgstr "Suchen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:1
 msgid "Getting Things GNOME!"
-msgstr ""
+msgstr "Getting Things GNOME!"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:2
 msgid "_Tasks"
@@ -465,15 +476,15 @@ msgstr "_Hilfe"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:17
 msgid "Open GTG help"
-msgstr ""
+msgstr "Öffnen der GTG-Hilfe"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:18
 msgid "Help to translate GTG into your language"
-msgstr ""
+msgstr "Helfen Sie, GTG auch in Ihre Sprache zu übersetzen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:19
 msgid "Report a problem to GTG developers"
-msgstr ""
+msgstr "Berichten Sie den Entwicklern von GTG ein Problem"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:20
 msgid "New Task"
@@ -506,7 +517,7 @@ msgstr "Arbeitsansicht"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:30
 msgid "Tasks"
-msgstr ""
+msgstr "Aufgaben"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:31
 msgid "About GTG!"
@@ -514,7 +525,7 @@ msgstr "Über Getting Things Gnome!"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:32
 msgid "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
-msgstr ""
+msgstr "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid ""
@@ -561,55 +572,55 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
-msgstr ""
+msgstr "_Heute"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:45
 msgid "_Tomorrow"
-msgstr ""
+msgstr "_Morgen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:46
 msgid "Next _Week"
-msgstr ""
+msgstr "Nächste _Woche"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:47
 msgid "Next _Month"
-msgstr ""
+msgstr "Nächster M_onat"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:48
 msgid "Next _Year"
-msgstr ""
+msgstr "Nächstes _Jahr"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:49
 msgid "_Clear Start Date"
-msgstr ""
+msgstr "Anfangsdatum _löschen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "Set Due Date"
-msgstr ""
+msgstr "Fälligkeitsdatum setzen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
-msgstr ""
+msgstr "_Jetzt"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:52
 msgid "_Soon"
-msgstr ""
+msgstr "_Bald"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:53
 msgid "_Someday"
-msgstr ""
+msgstr "_Irgendwann"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:54
 msgid "_Clear Due Date"
-msgstr ""
+msgstr "Fälligkeitsdatum entfernen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "Modify Tags..."
-msgstr ""
+msgstr "Schlagwörter bearbeiten…"
 
 #: GTG/gtk/browser/tag_context_menu.py:59
 msgid "Edit Tag..."
-msgstr ""
+msgstr "Schlagwort bearbeiten…"
 
 #: GTG/gtk/editor/__init__.py:36
 msgid "Mark this task as done"
@@ -705,7 +716,7 @@ msgstr "Bald"
 
 #: GTG/gtk/editor/taskeditor.glade.h:12
 msgid "Someday"
-msgstr ""
+msgstr "Irgendwann"
 
 #: GTG/gtk/delete_dialog.py:92
 msgid ""
@@ -791,7 +802,7 @@ msgstr "Über die _Erweiterung"
 #: GTG/gtk/plugins.py:142
 #, python-format
 msgid "Plugins - %s"
-msgstr ""
+msgstr "Plugins - %s"
 
 #: GTG/info.py:34
 msgid "GTG is a personal tasks and TODO-list items organizer for the GNOME."
@@ -799,7 +810,7 @@ msgstr ""
 
 #: GTG/plugins/not_today/not_today.py:59
 msgid "Do it tomorrow"
-msgstr ""
+msgstr "Morgen erledigen"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
@@ -852,11 +863,11 @@ msgstr "_Neue Aufgabe hinzufügen"
 
 #: GTG/plugins/notification_area/notification_area.py:281
 msgid "_Show Main Window"
-msgstr ""
+msgstr "_Zeige Hauptfenster"
 
 #: GTG/plugins/notification_area/notification_area.py:294
 msgid "_Quit"
-msgstr ""
+msgstr "_Beenden"
 
 #: GTG/plugins/export/export_templates/description_textual.py:21
 msgid "Text-only"
@@ -915,6 +926,8 @@ msgstr "Eine Vorlage einer einfachen Webseite, die gut zu drucken ist."
 #: GTG/plugins/export/export.py:120
 msgid "No task matches your criteria. Empty report can't be generated."
 msgstr ""
+"Es gibt keine Aufgabe, die Ihren Kriterien entspricht.  Ein leerer Bericht "
+"kann nicht erstellt werden."
 
 #: GTG/plugins/export/export.py:138
 #, python-format
@@ -1034,11 +1047,11 @@ msgstr "oder"
 
 #: GTG/core/search.py:89
 msgid "after"
-msgstr ""
+msgstr "nach"
 
 #: GTG/core/search.py:90
 msgid "before"
-msgstr ""
+msgstr "vor dem"
 
 #: GTG/core/search.py:91 GTG/tools/dates.py:305
 msgid "today"
@@ -1066,15 +1079,15 @@ msgstr "bald"
 #: GTG/tests/test_dates.py:71 GTG/tests/test_dates.py:78
 #: GTG/tests/test_dates.py:79
 msgid "someday"
-msgstr ""
+msgstr "Irgendwann"
 
 #: GTG/core/search.py:97
 msgid "notag"
-msgstr ""
+msgstr "kein Schlagwort"
 
 #: GTG/core/firstrun_tasks.py:35
 msgid "Getting Started With GTG"
-msgstr ""
+msgstr "Erste Schritte mit GTG"
 
 #: GTG/core/firstrun_tasks.py:36
 msgid ""
