Russian localization of help

--- a/AUTHORS
+++ b/AUTHORS
@@ -116,3 +116,4 @@ For 0.3.1:
 * Codee <kmhpfoss@gmail.com>
 * Tom Kadwill <tomkadwill@gmail.com>
 * Parin Porecha <parinporecha@gmail.com>
+* DmDr <cardioexp@gmail.com>
