--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
     * Fix for bug #1090301: "Deactivating the untouched tasks plugin leaves "add @untouched tag" in plugins menu", by Nimit Shah
     * Fix for bug #1039651: Urgency coloring of parent tasks in collapsed view, by Parin Porecha
     * Fix for bug #1032745: Calendar widget is padded to always be visible on the screen
+    * Russian localization of help by DmDr
 
 2012-11-06 Getting Things GNOME! 0.3
     * Hide tasks with due date someday, #931376
