--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
     * Fix for bug #1039651: Urgency coloring of parent tasks in collapsed view, by Parin Porecha
     * Fix for bug #1032745: Calendar widget is padded to always be visible on the screen
     * Russian localization of help by DmDr
+    * Fix for bug #1096622: Damaged image in the help, by Parin Porecha
+    * Fix for bug #1095390: Quick Add bar incorrectly parses tags, by Parin Porecha
 
 2012-11-06 Getting Things GNOME! 0.3
     * Hide tasks with due date someday, #931376
