--- a/po/es.po
+++ b/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-01-17 21:39+0000\n"
+"PO-Revision-Date: 2013-01-20 10:45+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-18 05:06+0000\n"
+"X-Launchpad-Export-Date: 2013-01-21 04:47+0000\n"
 "X-Generator: Launchpad (build 16430)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
@@ -258,6 +258,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"El servicio de sincronización <b>%s</b> no puede iniciar sesión con los "
+"datos de autenticación proporcionados, y se ha desactivado. Para reintentar "
+"el inicio de sesión, reactive el servicio."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -584,7 +587,7 @@ msgstr "_Seleccionar fecha de inicio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
-msgstr ""
+msgstr "_Hoy"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:45
 msgid "_Tomorrow"
@@ -612,7 +615,7 @@ msgstr "Establecer fecha de término"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Now"
-msgstr ""
+msgstr "_Ahora"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:52
 msgid "_Soon"
