--- a/po/pl.po
+++ b/po/pl.po
@@ -9,16 +9,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2012-11-20 22:14+0000\n"
-"Last-Translator: Witek M. <wmitoraj@gmail.com>\n"
+"PO-Revision-Date: 2013-01-22 20:10+0000\n"
+"Last-Translator: Xevaquor <xevaquor@hotmail.com>\n"
 "Language-Team: Polish <ponton@jabster.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:39+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-01-23 04:56+0000\n"
+"X-Generator: Launchpad (build 16441)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -555,6 +555,13 @@ msgid ""
 "Getting Things GNOME!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! jest wolnym oprogramowaniem, możesz rozpowszechniać "
+"i/lub modyfkować je zgodnie z warunkami licencji GNU General Public License "
+"opublikowanymi przez Free Software Foundation w wersji trzeciej lub (według "
+"własnego uznania) dowolnej późniejszej.\n"
+"\n"
+"Getting Things GNOME! jest rozpowszechniany z nadzieją że będzie przydatny, "
+"lecz BEZ ŻADNEJ GWARANCJI; także domniemanej gwarancji"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Mark as Not Done"
