--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 ????-??-?? Getting Things GNOME! 0.3.1
+    * Fix for bug #1050520: Remember the last used tag, Marta Maria Casetti
     * Fix for bug #1024473: Have 'Show Main Window' in notification area, by Antonio Roquentin
     * Fix for bug #1043457: gtcli search returns closed tasks, by Nimit Shah
     * Fix for bug #1073607: "GTG starts after login" doesn't work with an invalid link
