--- a/po/cs.po
+++ b/po/cs.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-01-09 22:32+0000\n"
-"Last-Translator: Konki <pavel.konkol@seznam.cz>\n"
+"PO-Revision-Date: 2013-02-25 21:40+0000\n"
+"Last-Translator: Tadeáš Pařík <tadeas.parik@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-01-10 04:47+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-02-26 05:09+0000\n"
+"X-Generator: Launchpad (build 16506)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -259,6 +259,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"Synchronizační služba <b>%s</b> se nemůže přihlásit dostupnými "
+"autentifikačními údaji a byla zablokována. K novému přihlášení tuto službu "
+"povolte."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -1280,7 +1283,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:142
 msgid "Learn How To Use Tags"
-msgstr ""
+msgstr "Naučte se jak používat štítky"
 
 #: GTG/core/firstrun_tasks.py:143
 msgid ""
