--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-01-03 14:35+0000\n"
+"PO-Revision-Date: 2013-02-26 16:56+0000\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-04 04:48+0000\n"
-"X-Generator: Launchpad (build 16393)\n"
+"X-Launchpad-Export-Date: 2013-02-27 04:38+0000\n"
+"X-Generator: Launchpad (build 16506)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -532,7 +532,9 @@ msgstr "Copyright © 2008-2012 Lionel Dricot, Bertrand Rousseau"
 msgid ""
 "GTG is a personal tasks and TODO-list items organizer for the GNOME desktop "
 "environment."
-msgstr "GTG è un organizzatore di attività per l'ambiente desktop GNOME"
+msgstr ""
+"GTG è un organizzatore personale di attività e di elenchi di cose da fare "
+"per l'ambiente GNOME"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "GTG website"
@@ -825,7 +827,7 @@ msgstr "Plugin - %s"
 msgid "GTG is a personal tasks and TODO-list items organizer for the GNOME."
 msgstr ""
 "GTG è un organizzatore personale di attività e di elenchi di cose da fare "
-"per l'ambiente GNOME."
+"per l'ambiente GNOME"
 
 #: GTG/plugins/not_today/not_today.py:59
 msgid "Do it tomorrow"
