--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@
     * Added command "gtcli overview"
     * Fix for bug #1076029: (Fixed regression) Notification area applet can't display attention icon
     * Pep8ification of code, by Nimit Shah
+    * Fix for bug #1141582: Crash on enabling hamster plugin, by Nimit Shah
 
 2012-11-06 Getting Things GNOME! 0.3
     * Hide tasks with due date someday, #931376
