--- a/po/cs.po
+++ b/po/cs.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-03-01 16:53+0000\n"
-"Last-Translator: Tadeáš Pařík <tadeas.parik@gmail.com>\n"
+"PO-Revision-Date: 2013-03-15 12:51+0000\n"
+"Last-Translator: David Kovář <davidkov@gmx.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2013-03-02 04:57+0000\n"
-"X-Generator: Launchpad (build 16514)\n"
+"X-Launchpad-Export-Date: 2013-03-16 05:54+0000\n"
+"X-Generator: Launchpad (build 16532)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -1328,7 +1328,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
-msgstr "Načte se, používat zobrazení práce"
+msgstr "Naučte se používat Pracovní pohled"
 
 #: GTG/core/firstrun_tasks.py:175
 msgid ""
