--- a/po/de.po
+++ b/po/de.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2013-01-09 08:48+0000\n"
-"Last-Translator: Scott <Unknown>\n"
+"PO-Revision-Date: 2013-03-17 20:43+0000\n"
+"Last-Translator: Borim <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-10 04:47+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-03-18 04:47+0000\n"
+"X-Generator: Launchpad (build 16532)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -55,7 +55,7 @@ msgstr "Schlagworte importieren"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "All tags"
-msgstr "Alle Schlagwörter"
+msgstr "Alle Tags"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "Just these tags:"
@@ -258,6 +258,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"Der Synchonisationsdienst <b>%s</b> kann sich nicht mit den angegeben  "
+"Authentifikations-Daten anmelden und wurde deaktiviert. Re-aktivieren Sie "
+"den Dienst, um die Anmeldung zu wiederholen."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -332,7 +335,7 @@ msgstr "Auf Unteraufgaben anwenden"
 
 #: GTG/gtk/browser/simple_color_selector.py:236
 msgid "Add custom color"
-msgstr ""
+msgstr "Benutzerdefinierte Farbe hinzufügen"
 
 #: GTG/gtk/browser/simple_color_selector.py:264
 msgid "Choose a color"
@@ -568,7 +571,7 @@ msgstr "_Teilaufgabe hinzufügen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:43
 msgid "_Set Start Date"
-msgstr ""
+msgstr "_Anfangsdatum setzen"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:44
 msgid "T_oday"
@@ -1165,7 +1168,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:114
 msgid "Learn How To Use Subtasks"
-msgstr ""
+msgstr "Lerne sie wie man Teilaufgaben verwendet"
 
 #: GTG/core/firstrun_tasks.py:115
 msgid ""
@@ -1283,7 +1286,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
-msgstr ""
+msgstr "Fehler melden"
 
 #: GTG/core/firstrun_tasks.py:225
 msgid ""
@@ -1375,7 +1378,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:312
 msgid "Learn How To Search For Tasks"
-msgstr ""
+msgstr "Lernen Sie, nach Aufgaben zu suchen."
 
 #: GTG/core/firstrun_tasks.py:313
 msgid ""
@@ -1527,7 +1530,7 @@ msgstr ""
 
 #: GTG/backends/backend_mantis.py:44
 msgid "MantisBT"
-msgstr ""
+msgstr "MantisBT"
 
 #: GTG/backends/backend_mantis.py:48
 msgid ""
