--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,20 +8,20 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-01-01 17:35+0100\n"
-"PO-Revision-Date: 2012-11-30 15:19+0000\n"
-"Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
+"PO-Revision-Date: 2013-03-26 13:42+0000\n"
+"Last-Translator: Sid Roberts <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-01-02 04:40+0000\n"
-"X-Generator: Launchpad (build 16378)\n"
+"X-Launchpad-Export-Date: 2013-03-27 04:37+0000\n"
+"X-Generator: Launchpad (build 16540)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
 msgid "Synchronization Services - %s"
-msgstr "Synchronization Services - %s"
+msgstr "Synchronisation Services - %s"
 
 #: GTG/gtk/backends_dialog/__init__.py:295
 #, python-format
@@ -257,6 +257,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"The <b>%s</b> synchronisation service cannot login with the  supplied "
+"authentication data and has been disabled. To retry the login, re-enable the "
+"service."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -823,7 +826,7 @@ msgstr "GTG is a personal tasks and TODO-list items organizer for the GNOME."
 
 #: GTG/plugins/not_today/not_today.py:59
 msgid "Do it tomorrow"
-msgstr ""
+msgstr "Do it tomorrow"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
@@ -876,11 +879,11 @@ msgstr "Add _New Task"
 
 #: GTG/plugins/notification_area/notification_area.py:281
 msgid "_Show Main Window"
-msgstr ""
+msgstr "_Show Main Window"
 
 #: GTG/plugins/notification_area/notification_area.py:294
 msgid "_Quit"
-msgstr ""
+msgstr "_Quit"
 
 #: GTG/plugins/export/export_templates/description_textual.py:21
 msgid "Text-only"
